--- a/index.html
+++ b/index.html
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
     
+<main>
+<div class="container">
+    <h1 id="presult">Player Score:</h1>
+    <h1 id="Computerscore">Computer Score:</h1>
+    <h1 id="Final_Result"></h1>
+    <h1 id="info"></h1>
+
+
+</div>
+<div class="container1">      <!-- ***************button  satırı*************-->
+<button class="btn" id = Rockbtn > Rock</button> 
+<button class="btn" id = Paperbtn> Paper</button>
+<button class="btn"id = Scissorbtn> Scissor</button>
+
+
+<br>
+<br>
+<br>
+<button class="btn" id = again>PLAY AGAIN</button>
+<h1 id="result"></h1>
+<h1 id="result2"></h1>
+</div>
+
+
+
+</main>
+
+<script src="/script/script.js"></script>
 </body>
 </html>
